# zerobuffer

./: .gitignore  API.md  BENCHMARKING_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CROSS_PLATFORM_IMPLEMENTATION_STATUS.md  CROSS_PLATFORM_TESTS.md  CROSS_PLATFORM_TEST_INTERFACE.md  CUSTOM_REGISTRY_CONCERNS.md  CUSTOM_VCPKG_REGISTRY_SETUP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_VALIDATION.md  DUPLEX_PROTOCOL_PROPOSITION.md  FEATURE-FILES-STRUCTURE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_TODO.md  LICENSE  PRINCIPAL_ENGINEER_REVIEW.md  PROPOSED_IMPROVEMENTS.md  PROTOCOL.md  PUBLISH_VCPKG_REGISTRY.md  README.md  README_PROJECT_STRUCTURE.md  RELEASE.md  TEST_COVERAGE_AND_INCONSISTENCIES.md  TEST_SCENARIOS.md  TEST_SCENARIOS_UPDATE_SUMMARY.md  VCPKG_BASELINE_EXPLAINED.md  VCPKG_SUBMISSION.md  ZeroBuffer.All.sln  ZeroBuffer.All.sln.DotSettings  comprehensive-feature-fix.py  find_hanging_test.sh  fix-feature-files.py  fix-orphaned-process-lines.py  fix-platform-steps.sh  prepare-vcpkg-submission.sh  publish-to-registry.sh  run-single-test.sh  setup-custom-vcpkg-registry.sh  (+7 more)
.claude/: settings.local.json
.github/: release.yml
.github/workflows/: publish-nuget.yml  publish-pypi.yml  publish-vcpkg-registry.yml  release.yml  test-custom-registry.yml  test-debug.yml  test-investigation.yml  test-vcpkg-port.yml  test.yml
ZeroBuffer.Harmony.Tests/: HarmonyTestBase.cs  HarmonyTestRunner.cs  HarmonyTestsDiscoverer.cs  StepCompletenessTest.cs  ZeroBuffer.Harmony.Tests.csproj  ZeroBuffer.Harmony.Tests.sln  ZeroBuffer.Harmony.Tests.sln.DotSettings  ZeroBufferE2ETests.cs  harmony-config.json  testEnvironments.json
ZeroBuffer.Harmony.Tests/CodeGeneration/: Program.cs  TestGenerator.cs  TestGeneratorConsole.csproj
ZeroBuffer.Harmony.Tests/Features/: 01-BasicCommunication.feature  02-ProcessLifecycle.feature  03-ErrorHandling.feature  04-EdgeCases.feature  05-CorruptionDetection.feature  06-Synchronization.feature  07-SystemResources.feature  11-StressTests.feature  12-ProtocolCompliance.feature  13-DuplexChannel.feature  DuplexAdvanced.feature  EdgeCases.feature  ErrorHandling.feature  Initialization.feature  PlatformSpecific.feature  ProcessLifecycle.feature  StressTests.feature  Synchronization.feature
cpp/: BENCHMARKING.md  BUILD_COMMANDS.md  CLAUDE.md  CMakeLists.txt  CONTEXT_PASSING_ANALYSIS.md  PERFORMANCE.md  README.md  SCHEMA_DIFFERENCES.md  VCPKG.md  build.sh  check_logging.sh  clean  generate_tests.sh  test.sh  vcpkg.json
cpp/ZeroBuffer.Cpp.Integration.Tests/: ContextPersistenceTests.cs  CppServeIntegrationTests.cs  HarmonyIntegrationTests.cs  HarmonyLoggingTests.cs  InitializationContextTests.cs  LoggingTests.cs  ParameterAndContextTests.cs  RawProtocolTests.cs  SchemaCompatibilityTests.cs  SharedContractTests.cs  TestTypedResponse.cs  ZeroBuffer.Cpp.Integration.Tests.csproj
cpp/benchmarks/: CMakeLists.txt  README.md  benchmark_roundtrip.cpp  benchmark_roundtrip_copy.cpp  compare_methods.cpp  relay_process.cpp
cpp/cmake/: zerobufferConfig.cmake.in
cpp/examples/: CMakeLists.txt  example_metadata.cpp  example_reader.cpp  example_writer.cpp
cpp/include/zerobuffer/: duplex_channel.h  duplex_channel_factory.h  duplex_client.h  immutable_duplex_server.h  logger.h  mutable_duplex_server.h  platform.h  reader.h  reader_impl.h  types.h  writer.h  zerobuffer.h
cpp/serve/: CMakeLists.txt  log_collector.cpp  log_collector.h  main.cpp  main_v2.cpp  main_v2_fgets_working.cpp
cpp/src/: debug_utils.h  duplex_channel_factory.cpp  duplex_client.cpp  immutable_duplex_server.cpp  mutable_duplex_server.cpp  platform_linux.cpp  platform_windows.cpp  reader.cpp  writer.cpp  zerobuffer.cpp
cpp/step_definitions/: basic_communication_steps.cpp  basic_communication_steps.h  buffer_naming_service.cpp  buffer_naming_service.h  duplex_channel_steps.cpp  duplex_channel_steps.h  step_registry.cpp  step_registry.h  test_context.cpp  test_context.h  test_data_patterns.cpp  test_data_patterns.h
cpp/tests/: CMakeLists.txt  CMakeLists.txt.backup  DESIGN.md  README.md  TODO.md
cpp/tests/cross-platform/: test_reader.cpp  test_writer.cpp
cpp/tests/generator/: Program.cs  README.md  TestFileGenerator.cs  generator.csproj
cross-platform-tests/: README.md  make_executable.sh  run_all_tests.sh  run_unified_test.sh
cross-platform-tests/direct/: debug_wrap_around.sh  test_cpp_writer_csharp_reader.sh  test_csharp_cpp_writer_reader.sh  test_simple_wrap.sh  test_wrap_around.sh  verify_wrap_around.sh
cross-platform-tests/python-cpp/: test_cpp_to_python.sh  test_python_to_cpp.sh
cross-platform-tests/results/: cpp_relay_csharp.json  cpp_relay_reader.json  cpp_relay_realistic_csharp.json  cpp_relay_realistic_reader.json  cpp_relay_realistic_writer.json  cpp_relay_writer.json  direct_cpp_reader.json  direct_cpp_writer.json  direct_csharp_reader.json  direct_csharp_writer.json  simple_wrap_reader.json  simple_wrap_writer.json  verify_wrap_cpp_writer.json  verify_wrap_csharp_reader.json
cross-platform-tests/round-trip/: test_simple.sh
csharp/: BENCHMARK_RESULTS.md  README.md  ZeroBuffer.sln  test-lockfree.sh  test.sh  test_frame_size.cs
python/: .gitignore  BENCHMARK_RESULTS.md  DESIGN.md  DUPLEX_CHANNEL.md  HARMONY_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  OPTIMIZATION_STRATEGY.md  PROTOCOL_COMPATIBILITY.md  PYTHON_CS_COMPARISON.md  PYTHON_TEST_GAPS.md  SERVE_DESIGN.md  benchmark_roundtrip.py  build.sh  copy_and_fix_features.py  copy_features.sh  cross_platform_test_python_cpp.sh  fix_remaining_types.py  fix_test_types.py  fix_types.py  mypy.ini  optimization_patch.py  pyproject.toml  pytest.ini  run_all_tests.sh  run_harmony_test.py  run_integration_tests.sh  run_simple_harmony_test.py  run_tests.py  run_unit_tests.sh  test.out  test.sh  test_basic_communication.py  test_duplex_example.py  test_duplex_shutdown.py  test_duplex_simple.py  test_error_events.py  test_new_features.py  test_reader.py  test_serve.py  (+11 more)
test-jsonrpc/: Program.cs  TestJsonRpc.csproj  TestWithStreamJsonRpc.cs
test-vcpkg-integration/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
(+353 files in other folders)
